Fix spacing around elements

--- a/css/main.css
+++ b/css/main.css
@@ -15,14 +15,14 @@ html {
 }
 
 .grains li {
-  margin-bottom: 2rem;
+  margin-bottom: 1.7em;
 }
 
 .grains img {
   width: 100px;
 
   float: left;
-  margin-right: .8rem;
+  margin-right: .7em;
 }
 
 .grains h2 {
